注文依頼一覧更新しました

--- a/app/views/end_users/unsubscribe.html.erb
+++ b/app/views/end_users/unsubscribe.html.erb
@@ -1,13 +1,14 @@
-<meta charset="utf-8">
+
+
 
 <div class="container">
-	<div class="row">
+	<div class="row col-md-6 col-md-offset-3">
 		<section>
-			<h1>退会手続き</h1>
-			<p>大会前に必ずお読みください</p>
+			<h1 class="text-center">退会手続き</h1>
+			<p class="text-danger">退会前に必ずお読みください</p>
 		</section>
 	</div>
-	<div class="row">
+	<div class="row col-md-6 col-md-offset-3 border">
 		<p>退会されますと、以下のサービスが利用できなくなります。</p>
 		<ul>
 			<li>プロフィール情報</li>
@@ -15,10 +16,9 @@
 			<li>変更・購入履歴</li>
 			<li>その他、ログインを必要とする全てのサービス</li>
 		</ul>
-		<p>以後、同じメールアドレスで再登録した場合でも、</p>
-		<p>以前利用していた情報は復元されません。</p>
+		<p class="bg-danger">以後、同じメールアドレスで再登録した場合でも、<br>以前利用していた情報は復元されません。</p>
 	</div>
-	<div class="btn-group">
-		<a href="#" class="btn btn-default" role="button">退会する</a>
+	<div class="btn-group col-md-6 col-md-offset-3 ">
+		<button type="button" class="btn btn-danger text-center">退会する</button>
 	</div>
 </div>
