--- a/app/views/admin_order_histories/admin_index.html.erb
+++ b/app/views/admin_order_histories/admin_index.html.erb
@@ -1,5 +1,5 @@
-<!-- ヘッダー -->
-<%= render 'shared/header_admin_after_login' %>
+
+
 
 <!-- ナビゲーション -->
 <div class="container">
@@ -20,34 +20,34 @@
 </div>
 <!-- タブの中身 -->
 <!-- 全体 -->
-
-
 <div class="tab-content">
 	<div class="tab-pane fade in active" id="all">
 	  <div class="container">
            <table class="table">
+            <% @order_histories.each do |order| %>
               <tbody>
                 <tr>
                    <th scope="row">購入者名</th>
-                   <td>サンプル太郎</td>
+                   <td><%= order.last_name_kanji %><%= order.first_name_kanji %></td>
                 </tr>
                 <tr>
                    <th scope="row">購入日時</th>
-                   <td></td>
+                   <td><%= order.created_at %></td>
                 </tr>
                 <tr>
                    <th scope="row">購入内容</th>
-                   <td>aaa</td>
+                   <td></td>
                 </tr>
                 <tr>
                    <th scope="row">送付先</th>
-                   <td>サンプル太郎 152-00002 xxx区xxx市xxxx</td>
+                   <td><span>〒</span><%= order.postal_code_1%><span>-</span><%= order.postal_code_2%><%= order.address %></td>
                 </tr>
                 <tr>
                    <th rowspan="2">ステータス</th>
-                   <td rowspan="2"></td>
+                   <td rowspan="2"><%= order.order_status%></td>
                 </tr>
                </tbody>
+          <% end %>
            </table>
       </div>
 　  </div>
@@ -91,7 +91,7 @@
                 </tr>
                 <tr>
                    <th scope="row">購入日時</th>
-                   <td>2019年9月15日17時30分</td>
+                   <td></td>
                 </tr>
                 <tr>
                    <th scope="row">購入内容</th>
