--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/header_admin_after_login' %>
 
 
 <table>
@@ -16,7 +17,6 @@
 			    <td><span>販売停止中</span></td>
 			<% end %>
 			<td><%= product.cd_name %></td>
-			
 			<td><%= product.is_deleted %></td>
 			<td><%=link_to "在庫追加", new_arrival_history_path(product.id) %></td>
 		</tr>
