--- a/app/views/shared/_footer_user.html.erb
+++ b/app/views/shared/_footer_user.html.erb
@@ -13,8 +13,8 @@
 					</button>
 					<!-- ドロップメニューの設定 -->
 					<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <li><%= link_to "お問い合せ", "#" %></li>
-                      <li><%= link_to "退会", users_unsubscribe_path %></li>
+                      <li><%= link_to "お問い合せ", "#" %></li> <!--未実装の為リンクなし -->
+                      <li><%= link_to "退会", unsubscribe_path %></li>
                     </ul>
 				</div><!-- /.dropdown -->
 			</div>
