--- a/app/views/shared/_header_admin_before_login.html.erb
+++ b/app/views/shared/_header_admin_before_login.html.erb
@@ -1,8 +1,8 @@
 <meta charset=utf-8>
-<header>
+<header class="page-header">
 	<div class="container-fluid border-bottom">
 		<div class="row">
 			<%= link_to image_tag('logo.png', :size => '200x100'), root_path %> <!-- ロゴ表示 -->
 		</div>
-		</div>
+	</div>
 </header><!-- /header -->
