--- a/app/assets/stylesheets/order_histories.scss
+++ b/app/assets/stylesheets/order_histories.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the order_histories controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.address_detail {
+  margin:2em 0;
+    position: relative;
+    padding: 0.5em 1.5em;
+    border-top: solid 2px black;
+    border-bottom: solid 2px black;
+    display: inline-block;
+    float: left;
+}
+.address_detail:before, .address_detail:after{
+    content: '';
+    position: absolute;
+    top: -10px;
+    width: 2px;
+    height: -webkit-calc(100% + 20px);
+    height: calc(100% + 20px);
+    background-color: black;
+}
+.address_detail:before {left: 10px;}
+.address_detail:after {right: 10px;}
+.address_detail p {
+    margin: 0;
+    padding: 0;
+}
+
+.form-control {
+  width: 50%;
+}
