--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: #fff;
   color: #333;
   margin: 33px;
@@ -7,7 +7,7 @@ body {
   line-height: 18px;
 }
 
-p, ol, ul, td {
+ p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -82,3 +82,4 @@ div {
 label {
   display: block;
 }
+*/
