--- a/app/assets/stylesheets/cart_items.scss
+++ b/app/assets/stylesheets/cart_items.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the cart_items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.box1 {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    font-weight: bold;
+    border: solid 3px #000000;
+}
+
+.quantity {
+	padding-top: 30px;
+	display: inline-block;
+}
+
+.destroy {
+	padding-top: 30px;
+}
+
+.cd_name {
+	padding-top: 20px;
+}
+
