--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,10 @@
-<%= render 'shared/header_admin_after_login' %>
+<!-- ヘッダー  -->
+<% if end_user_signed_in? %>
+<%= render "shared/header_user_after_login" %>
+<% else %>
+<%= render "shared/header_user_before_login" %>
+<% end %>
+<!-- ヘッダーここまで -->
 
 
 <table>
@@ -25,6 +31,8 @@
 	</tdbody>
 </table>
 
+<!-- フッター -->
+<%= render "shared/footer_user" %>
 
 
 
