--- a/app/views/shared/_header_user_after_login.html.erb
+++ b/app/views/shared/_header_user_after_login.html.erb
@@ -14,7 +14,7 @@
             </div>
 			<div class="row col-xs-5">
 				<div class="row">
-					<p>サンプル太郎<span>さん</span></p>    <!-- 変数に直す -->
+					<p><%= current_end_user.last_name_kanji + current_end_user.first_name_kanji %><span>さん</span></p>
 				</div>
 				<div class="row">
 					<div class="col-xs-3">
