--- a/app/views/cart_items/index.html.erb
+++ b/app/views/cart_items/index.html.erb
@@ -9,10 +9,9 @@
 			            <tr>
 				            <td>
 				              	<%= image_tag product.image_id.to_s %>
-				                <% end %>
 				            </td>
 				            <td>
-								<h2><%= product.cd_name %></h2>
+								<h2><% product.cd_name %></h2>
 						  	</td>
 				            <td>数量
 					   			<select name="quantity">
@@ -23,9 +22,9 @@
 								<option value="5">5</option>
 							    </select>
 							</td>
-							<td><%= link_to '削除', cart_items_path(@user.id) %></td>
+							<td><%= link_to '削除', cart_items_path(current_end_user.id) %></td>
 							<td>
-								<% @products.each do |product| %>
+								<%# @products.each do |product| %>
 								<P>価格</P>
 							    <%= product.price %>(税込）
 						    </td>
