--- a/app/views/products/admin_index.html.erb
+++ b/app/views/products/admin_index.html.erb
@@ -1,3 +1,12 @@
+<!-- ヘッダー  -->
+<% if admin_signed_in? %>
+<%= render "shared_header_admin_after_login" %>
+<% else %>
+<%= render "shared_header_admin_before_login" %>
+<% end %>
+<!-- ヘッダー ここまで -->
+
+
 <table>
 	<tdbody>
 		<% @products.each do |product| %>
@@ -14,11 +23,12 @@
 			    <td><span>販売停止中</span></td>
 			<% end %>
 			<td><%= product.cd_name %></td>
-			
 			<td><%= product.is_deleted %></td>
 			<tb><%=link_to "在庫追加", new_arrival_history_path(product.id) %></tb>
 		</tr>
 		<% end %>
-
 	</tdbody>
 </table>
+
+<!-- フッター  -->
+<%= render "shared/footer_admin" %>
