--- a/app/views/order_histories/thanks.html.erb
+++ b/app/views/order_histories/thanks.html.erb
@@ -1,5 +1,5 @@
 <p>ご注文ありがとうございます！</p>
 <p>商品到着まで今しばらくお待ちください!!</p>
 
-<%= link_to "TOPへ戻る" root_path %>
-<%= link_to "マイページへ" "/users/1", %>
+<%= link_to "TOPへ戻る" ,root_path %>
+<%= link_to "マイページへ", "/users/1" %>
