--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,7 +8,7 @@
 						<%= @product.cd_name %>
 					</div><br>
 					<div>
-						<%= @product.label.label_name %>
+						<%= @product.label_name %>
 					<div><br>
 						￥<%= @product.price %>（税込価格）
 					</div>
