--- a/app/views/order_histories/index.html.erb
+++ b/app/views/order_histories/index.html.erb
@@ -1,24 +1,37 @@
-<p>購入履歴一覧画面</p>
 
+<p class="title">購入履歴</p>
+  <table class="table table-striped">
+    <tbody>
 <% @order_histories.each do |order_history| %>
-  <% @order_history.order_details.each do |order_detail| %>
+  <% order_number_total = 0 %>
+  <% order_total = 0 %>
+  <% order_history.order_details.each do |order_detail| %>
   <!-- 購入個数計算 -->
-  <% @order_number_total += order_detail.product_number %>
+  <% order_number_total += order_detail.product_number %>
   <!-- 購入金額計算 -->
-  <% @order_total += order_history.product.price * order_history.product_number * 1.08 %>
-  <% end %>
+  <% order_total += order_detail.product.price * order_detail.product_number * 1.08 %>
 
-  注文日<%= order_history.created_at %>
-  <!-- 購入個数表示 -->
-  個数 <%= @order_number_total %>
-  <!-- 購入金額表示 -->
-  合計 <%= @order_total + 500 %>
-  <%= order_history.order_status %>
-
-
-  送付先
-  <%= order_history.last_name_kanji %><%= order_history.first_name_kanji %>
-  <%= order_history.telephone_number %>
-  <%= order_history.address %>
+      <tr>
+      <td>
+        <p>注文日</p>
+        <p><%= link_to(order_history_path(order_history)) do %><%= order_history.created_at.strftime("%Y年%m月%d日") %></p>
+      </td>
+      <td>
+        <p>個数</p>
+        <p><%= order_number_total %></p>
+      </td>
+      <td>
+        <p>合計</p>
+        <p><%= order_total.to_i + 500 %></p>
+      </td>
+      <td>
+        <p></p>
+        <p><%= order_history.order_status %></p>
+      </td>
+    </tr>
+    <% end %>
 
 <% end %>
+<% end %>
+  </tbody>
+</table>
