--- a/app/views/shared/_footer_admin.html.erb
+++ b/app/views/shared/_footer_admin.html.erb
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
-<footer>
+<footer class="kotei">
 	<div class=" container-fluid">
 		<div class="row">
 			<div class="col-xs-4"></div>
