--- a/app/views/shared/_footer_user.html.erb
+++ b/app/views/shared/_footer_user.html.erb
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <footer>
-	<div class=" container-fluid">
+	<div class=" container-fluid kotei">
 		<div class="row">
 			<div class="col-xs-4"></div>
 			<div class="col-xs-4">
