--- a/app/views/shared/_header_admin_after_login.html.erb
+++ b/app/views/shared/_header_admin_after_login.html.erb
@@ -1,5 +1,5 @@
 <meta charset=utf-8>
-<header class="container-fluid page-header kotei">
+<header class="container-fluid page-header">
 	<div class="row row-eq-height">
 		<div class="col-xs-3 height-100">
 			<%= link_to image_tag('logo.png', :size => '200x100'), root_path %>
