--- a/app/views/products/admin_index.html.erb
+++ b/app/views/products/admin_index.html.erb
@@ -2,21 +2,23 @@
 	<tdbody>
 		<% @products.each do |product| %>
 		<tr>
+			<td>ID<%= product.id %></td>
 			<% if product.product_status == "on_sale" %>
 			    <td><%= image_tag product.image_id.url %></td> <!-- carierwaveの画像を表示  -->
 			<% else %>
 			    <td><%= image_tag "sold_out.jpg", size: "200x200" %></td>
 			<% end %>
+
+            <td><%= product.cd_name %></td>
+            <td><%= product.artist_name %></td>
 			<td><%= number_to_currency(product.price) %></td>
 			<% if product.product_status == "on_sale" %>
 			    <td><span>発売中</span></td>
 			<% else %>
 			    <td><span>販売停止中</span></td>
 			<% end %>
-			<td><%= product.cd_name %></td>
-			
 			<td><%= product.is_deleted %></td>
-			<tb><%=link_to "在庫追加", new_arrival_history_path(product.id) %></tb>
+			<td><%=link_to "在庫追加", new_arrival_history_path(product.id) %></td>
 		</tr>
 		<% end %>
 
