--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,29 +1,24 @@
 <%= render 'shared/header_admin_after_login' %>
 
 
-<table>
-	<tdbody>
-		<% @products.each do |product| %>
-		<tr>
-			<% if product.product_status == "on_sale" %>
-			    <td><%= image_tag product.image_id.url %></td> <!-- carierwaveの画像を表示  -->
-			<% else %>
-			    <td><%= image_tag "sold_out.jpg", size: "200x200" %></td>
-			<% end %>
-			<td><%= number_to_currency(product.price) %></td>
-			<% if product.product_status == "on_sale" %>
-			    <td><span>発売中</span></td>
-			<% else %>
-			    <td><span>販売停止中</span></td>
-			<% end %>
-			<td><%= product.cd_name %></td>
-			<td><%= product.is_deleted %></td>
-			<td><%=link_to "在庫追加", new_arrival_history_path(product.id) %></td>
-		</tr>
-		<% end %>
 
-	</tdbody>
-</table>
+		<% @products.each do |product| %>
+		<div style="width: 250px; border: 1px solid black; margin: 5px; display: inline-block; text-align: center;">
+			<div style="height: 210px; line-height: 210px;">
+			<% if product.product_status == "on_sale" %>
+			    <%= image_tag product.image_id.url %> <!-- carierwaveの画像を表示  -->
+			<% else %>
+			    <%= image_tag "sold_out.jpg", size: "200x200" %>
+			<% end %>
+		    </div>
+
+			<div style=" border: 1px solid black; padding: 10px;">
+              <%= product.cd_name %><br>
+			  <%= product.artist_name %><br>
+			  <%= number_to_currency(product.price) %><br>
+		    </div>
+    	</div>
+	<% end %>
 
 
 
