--- a/app/views/end_users/show.html.erb
+++ b/app/views/end_users/show.html.erb
@@ -1,80 +1,83 @@
-<div>
-  <h4 style="text-align: center; margin-top: 20px">会員登録情報</h4>
-  <div style="margin: 30px auto; width: 800px; padding-left: 100px">
 
-    <div class="mypage_content">
-      <div class="form_inlineblock">
-        <h6>お名前</h6>
+<h4 style="text-align: center; margin-top: 20px">会員登録情報</h4>
+<div class="container">
+  <div class="justify-content-center">
+    <div class="col-6 col-offset-3">
+      <div class="mypage_content">
+        <div class="form_inlineblock">
+          <h6>お名前</h6>
+        </div>
+        <div class="form_inlineblock">
+          <h6 class="form_text">姓</h6>
+          <div class="form_border"><%= @user.last_name_kanji %></div>
+        </div>
+        <div class="form_inlineblock">
+          <h6 class="form_text">名</h6>
+          <div class="form_border"><%= @user.first_name_kanji %></div>
+        </div>
       </div>
-      <div class="form_inlineblock">
-        <h6 class="form_text">姓</h6>
-        <div class="form_border"><%= @user.last_name_kanji %></div>
-      </div>
-      <div class="form_inlineblock">
-        <h6 class="form_text">名</h6>
-        <div class="form_border"><%= @user.first_name_kanji %></div>
-      </div>
-    </div>
 
-    <div class="mypage_content">
-      <div class="form_inlineblock">
-        <h6>お名前</h6>
-        <h6>(カナ)</h6>
+      <div class="mypage_content">
+        <div class="form_inlineblock">
+          <h6>お名前</h6>
+          <h6>(カナ)</h6>
+        </div>
+        <div class="form_inlineblock">
+          <h6 class="form_text">セイ</h6>
+          <div class="form_border"><%= @user.last_name_katakana %></div>
+        </div>
+        <div class="form_inlineblock">
+          <h6 class="form_text">メイ</h6>
+          <div class="form_border"><%= @user.first_name_katakana %></div>
+        </div>
       </div>
-      <div class="form_inlineblock">
-        <h6 class="form_text">セイ</h6>
-        <div class="form_border"><%= @user.last_name_katakana %></div>
-      </div>
-      <div class="form_inlineblock">
-        <h6 class="form_text">メイ</h6>
-        <div class="form_border"><%= @user.first_name_katakana %></div>
-      </div>
-    </div>
 
-    <div class="mypage_content">
-      <div class="form_inlineblock">
-        <h6>郵便番号</h6>
+      <div class="mypage_content">
+        <div class="form_inlineblock">
+          <h6>郵便番号</h6>
+        </div>
+        <div class="form_inlineblock">
+          <span>〒</span>
+          <span class="form_border"><%= @addresses_is_main.postal_code_1 %></span>
+          <span>-</span>
+          <span class="form_border"><%= @addresses_is_main.postal_code_2 %></span>
+        </div>
       </div>
-      <div class="form_inlineblock">
-        <span>〒</span>
-        <span class="form_border"><%= @addresses_is_main.postal_code_1 %></span>
-        <span>-</span>
-        <span class="form_border"><%= @addresses_is_main.postal_code_2 %></span>
-      </div>
-    </div>
 
-    <div class="mypage_content">
-      <div class="form_inlineblock">
-        <h6>ご住所</h6>
+      <div class="mypage_content">
+        <div class="form_inlineblock">
+          <h6>ご住所</h6>
+        </div>
+        <div class="form_inlineblock">
+          <div class="form_border"><%= @addresses_is_main.address %></div>
+        </div>
       </div>
-      <div class="form_inlineblock">
-        <div class="form_border"><%= @addresses_is_main.address %></div>
-      </div>
-    </div>
 
-    <div class="mypage_content">
-      <div class="form_inlineblock">
-        <h6>電話番号</h6>
+      <div class="mypage_content">
+        <div class="form_inlineblock">
+          <h6>電話番号</h6>
+        </div>
+        <div class="form_inlineblock">
+          <div class="form_border"><%= @addresses_is_main.telephone_number %></div>
+        </div>
       </div>
-      <div class="form_inlineblock">
-        <div class="form_border"><%= @addresses_is_main.telephone_number %></div>
-      </div>
-    </div>
 
-    <div class="mypage_content">
-      <div class="form_inlineblock">
-        <h6>メールアドレス</h6>
+      <div class="mypage_content">
+        <div class="form_inlineblock">
+          <h6>メールアドレス</h6>
+        </div>
+        <div class="form_inlineblock">
+          <div class="form_border"><%= @user.email %></div>
+        </div>
       </div>
-      <div class="form_inlineblock">
-        <div class="form_border"><%= @user.email %></div>
-      </div>
+      <%= link_to "会員情報編集", edit_end_user_registration_path, :class => "btn btn-primary" %>
     </div>
   </div>
 
-  <div style="width: 1200px; margin: 0 auto;">
-    <div style="width: 350px; height: 200px; display: inline-block">
+  <div class="row justify-content-around">
+    <div class="col-md-4">
       <div class="bg-success">
-        <p style="margin-bottom: 0">新しい住所を追加</p>
+        <p style="margin-bottom: 0;">新しい住所を追加</p>
       </div>
       <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
         <div><%= link_to "+", new_address_path, :style => "font-size: 150px; color: black;" %></div>
@@ -83,18 +86,19 @@
 
     <% @addresses.each do |address| %>
       <% if address.is_main != 1 %>
-      <div style="width: 350px; height: 200px; display: inline-block">
+      <div class="col-md-4">
         <div class="bg-success">
-          <p style="margin-bottom: 0"><%= "#{address.last_name} #{address.first_name}" %></p>
+          <p style="margin-bottom: 0; text-align: center"><%= "#{address.last_name} #{address.first_name}" %></p>
         </div>
-        <div>
+        <div  style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 214px;">
           <p><%= "〒#{address.postal_code_1}-#{address.postal_code_2}" %></p>
           <p><%= address.address %></p>
           <p><%= address.telephone_number %></p>
+          <%= link_to "編集", edit_address_path, :style => "float: left;" %>|
+          <%= link_to "削除", address_path(address.id), method: :delete, :style => "display: inline-block" %>
         </div>
       </div>
       <% end %>
     <% end %>
   </div>
-
 </div>
