--- a/app/views/order_histories/index.html.erb
+++ b/app/views/order_histories/index.html.erb
@@ -1,4 +1,4 @@
-
+<%= render 'shared/header_user_after_login' %>
 <p class="title">購入履歴</p>
   <table class="table table-striped">
     <tbody>
@@ -35,3 +35,6 @@
 <% end %>
   </tbody>
 </table>
+
+<%= render 'shared/footer_user' %>
+
