--- a/app/views/order_histories/show.html.erb
+++ b/app/views/order_histories/show.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/header_user_after_login' %>
 <p>購入履歴詳細画面</p>
 
   <!-- 計算用のeach文 -->
@@ -31,3 +32,4 @@
   <%= @order_history.last_name_kanji %><%= @order_history.first_name_kanji %>
   <%= @order_history.telephone_number %>
   <%= @order_history.address %>
+<%= render 'shared/footer_user' %>
