--- a/app/views/order_histories/confirm.html.erb
+++ b/app/views/order_histories/confirm.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/header_user_after_login' %>
+
 <h1>ご注文内容の確認</h1>
 <p>配送先</p>
 
@@ -53,3 +55,5 @@
 </div>
 
 <% end %>
+
+<%= render 'shared/footer_user' %>
