--- a/app/views/order_histories/new.html.erb
+++ b/app/views/order_histories/new.html.erb
@@ -1,30 +1,26 @@
+<%= render 'shared/header_user_after_login' %>
+
+<div class="col-xs-1">
+</div>
+
+<div class="col-xs-9">
 <h1 class="title">ご注文内容の確認</h1>
 
 <% @cart_items.each do |cart_item| %>
-  <%= image_tag cart_item.product.image_id.to_s %>
-
-  <%= cart_item.product.cd_name %>
-
-  <p>数量　<%= cart_item.product_number %></p>
-
-  <div>
-    <select name=“数量” required>
-      <option value="cart_item.product_number" selected><%= cart_item.product_number %></option>
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value=“3”>3</option>
-      <option value="4">4</option>
-      <option value=“5”>5</option>
-      <option value="6">6</option>
-      <option value=“7”>7</option>
-      <option value="8">8</option>
-      <option value=“9”>9</option>
-      <option value="10">10</option>
-    </select>
+  <div class="row cart-contents">
+    <div class="col-xs-5">
+      <%= image_tag cart_item.product.image_id.to_s, size: "200x200"  %>
+    </div>
+    <div class="col-xs-7">
+      <p class="cart-item-headline"><%= cart_item.product.cd_name %></p>
+    <div class="cart-item-number-box">
+      <p class="cart-item-number">数量　<%= cart_item.product_number %></p>
+    </div>
+    <div class="cart-item-price-box">
+      <p class="cart-item-headline">価格　¥<%= cart_item.product.price * cart_item.product_number * 1.08.to_i %>(税込)</p>
+    </div>
+    </div>
   </div>
-
-  <p>価格　¥<%= cart_item.product.price * cart_item.product_number * 1.08 %>(税込)</p>
-
 <% end %>
 
 
@@ -32,73 +28,116 @@
 <!-- rails5から新導入 -->
 <!-- form_withはデフォでAjax送信（つまりremote: true）なので、ページ遷移しない -->
 <!-- なので、それを普通のHTTP送信にするためにlocal: true -->
-<%= form_with model: @order_history, url: order_histories_confirm_path, local: true do |form| %>
+  <%= form_with model: @order_history, url: order_histories_confirm_path, local: true do |form| %>
 
-<% if @order_history.errors.any? %>
-  <div id="error_explanation" class="alert alert-danger">
-    <ul>
-      <% @order_history.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<h1 class="title">配送先</h1>
-
-<div class="field">
-  <% @end_user.addresses.each do |address| %>
-    <div class="address_detail">
-      <!-- 既存の住所を使うゾーン -->
-      <!--  上か下のラジオボタンどちらを押したかによって、条件分岐 -->
-      <!--  どっちのボタンを押したかを、何らかの箱に入れなくちゃいけない -->
-      <!--  そこで、order_histories_addressという、（カラムにはない）暫定のカラムみたいなもの（プロパティという）を作り出して、そこの結果によってコントローラで条件分岐させてる -->
-      <!-- viewでは特に実は何もしてなくて、ただ:order_histories_addressにどのアドレスかの情報or 新規作成を表すnewという文字列を入れてるだけ -->
-      <label><%= form.radio_button :selected_order_histories_address_id, address.id %></label>
-      <p><%= address.address %></p>
-      <p><%= address.last_name %> <%= address.first_name %></p>
-      <p><%= address.telephone_number %></p>
-      <p><%= address.postal_code_1 %>-<%= address.postal_code_2 %></p>
+  <% if @order_history.errors.any? %>
+    <div id="error_explanation" class="alert alert-danger">
+      <ul>
+        <% @order_history.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
     </div>
   <% end %>
-  <!-- ここまで -->
+  <div class="row">
+  <h1 class="new_title">配送先</h1>
 
-  <!--  新たな住所を登録するゾーン -->
-  <label><%= form.radio_button :selected_order_histories_address_id, 'address新規登録' %></label>
-  <label>姓</label>
-  <%= form.text_field :last_name_kanji, class:"form-control", :size => 80 %>
-  <label>名</label>
-  <%= form.text_field :first_name_kanji, class:"form-control" %>
-  <label>電話番号</label>
-  <%= form.text_field :telephone_number, class:"form-control" %>
-  <label>郵便番号</label>
-  <%= form.text_field :postal_code_1, class:"form-control" %>-<%= form.text_field :postal_code_2, class:"form-control" %>
-  <label>住所</label>
-  <%= form.text_area :address, class:"form-control", row:"5" %>
-  <!-- ここまで -->
-</div>
-
-  <p>お支払い方法を選択</p>
-  <p><label>
-  <%= form.radio_button :pay_method, "銀行振込" %>銀行振込
-  </label></p>
-  <p><label>
-  <%= form.radio_button :pay_method, "クレジットカード" %>クレジットカード
-  </label></p>
-  <p><label>
-  <%= form.radio_button :pay_method, "代金引換" %>代金引換
-  </label></p>
+      <% @end_user.addresses.each do |address| %>
+        <div class="col-xs-3 address_detail">
+        <!-- 既存の住所を使うゾーン -->
+        <!--  上か下のラジオボタンどちらを押したかによって、条件分岐 -->
+        <!--  どっちのボタンを押したかを、何らかの箱に入れなくちゃいけない -->
+        <!--  そこで、order_histories_addressという、（カラムにはない）暫定のカラムみたいなもの（プロパティという）を作り出して、そこの結果によってコントローラで条件分岐させてる -->
+        <!-- viewでは特に実は何もしてなくて、ただ:order_histories_addressにどのアドレスかの情報or 新規作成を表すnewという文字列を入れてるだけ -->
+          <label><%= form.radio_button :selected_order_histories_address_id, address.id %></label>
+          <p><%= address.address %></p>
+          <p><%= address.last_name %> <%= address.first_name %></p>
+          <p><%= address.telephone_number %></p>
+          <p><%= address.postal_code_1 %>-<%= address.postal_code_2 %></p>
+        </div>
+      <% end %>
+  </div>
+    <!-- ここまで -->
 
 
-<p>商品の小計</p>
-<% @subtotal = 0 %>
-<% @cart_items.each do |cart_item| %>
-  <%  @subtotal += (cart_item.product.price * cart_item.product_number) %>
-<% end %>
-<p>小計　¥<%= @subtotal %></p>
-<p>税   ¥<%= @subtotal * 0.08 %></p>
-<p>配送料   ¥<%= 500 %></p>
-<p>合計 ¥<%= @subtotal * 1.08 + 500  %></p>
+    <!--  新たな住所を登録するゾーン -->
+    <div class="row">
+    <label><%= form.radio_button :selected_order_histories_address_id, 'address新規登録' %></label>
+  　<p class="address_input">別のお届け先を入力</p>
+    <div class="col-lg-7 new-address">
+      <p style="display: inline-block; margin-right: 25px">名前</p>
+      <div style="display: inline-block; margin-right: 25px">
+        <%= form.label :last_name_kanji, "(姓)" %><br/>
+        <%= form.text_field :last_name_kanji, class:"form-control", :size => "20*20"  %>
+      </div>
+      <div style="display: inline-block">
+        <%= form.label :first_name_kanji, "(名)" %><br/>
+        <%= form.text_field :first_name_kanji, class:"form-control" %>
+      </div>
+      <div>
+        <p style="display: inline-block; margin-right: 25px">電話番号</p>
+        <div style="display: inline-block; margin-right: 25px">
+          <%= form.text_field :telephone_number, class:"form-control", :size => "40*40" %>
+        </div>
+      </div>
+      <div>
+        <p style="display: inline-block; margin-right: 25px">郵便番号</p>
+        <div style="display: inline-block">
+          <%= form.text_field :postal_code_1, class:"form-control", :size => "10*10" %>
+        </div>
+          -
+        <div style="display: inline-block">
+          <%= form.text_field :postal_code_2, class:"form-control", :size => "10*10" %>
+        </div>
+      </div>
+      <div>
+        <p style="display: inline-block; margin-right: 25px">住所</p>
+        <div style="display: inline-block">
+          <%= form.text_field :address, class:"form-control", :size=>"70x70" %>
+        </div>
+      <!-- ここまで -->
+      </div>
+    </div>
+  </div>
 
-<%= form.submit "注文最終画面へ" %>
-<% end %>
+    <div class="row">
+        <h1 class="new_title">お支払い方法を選択</h1>
+        <div class="pay_method">
+        <p>
+          <label>
+            <%= form.radio_button :pay_method, "銀行振込" %>銀行振込
+          </label>
+        </p>
+        <p>
+          <label>
+            <%= form.radio_button :pay_method, "クレジットカード" %>クレジットカード
+          </label>
+        </p>
+        <p>
+          <label>
+            <%= form.radio_button :pay_method, "代金引換" %>代金引換
+          </label>
+        </p>
+      </div>
+    </div>
+   </div>
+
+<div class="col-xs-2">
+  <div class="box1">
+    <p>商品の小計</p>
+    <% @subtotal = 0 %>
+    <% @cart_items.each do |cart_item| %>
+      <%  @subtotal += (cart_item.product.price * cart_item.product_number) %>
+    <% end %>
+    <p>小計　¥<%= @subtotal %></p>
+    <p>税   ¥<%= (@subtotal * 0.08).to_i %></p>
+    <p>配送料   ¥<%= 500 %></p>
+    <p>合計 ¥<%= (@subtotal * 1.08 + 500).to_i  %></p>
+
+    <%= form.submit "注文最終画面へ" %>
+    <% end %>
+    </div>
+    </div>
+
+
+<%= render 'shared/footer_user' %>
