--- a/app/views/order_histories/thanks.html.erb
+++ b/app/views/order_histories/thanks.html.erb
@@ -1,5 +1,8 @@
-<p>ご注文ありがとうございます！</p>
-<p>商品到着まで今しばらくお待ちください!!</p>
-
+<%= render 'shared/header_user_after_login' %>
+<div class="thankyou">
+  <p class="thanks-message">ご注文ありがとうございます！</p>
+  <p class="thanks-message">商品到着まで今しばらくお待ちください!!</p>
+</div>
 <%= link_to "TOPへ戻る" ,root_path %>
 <%= link_to "マイページへ", "/users/1" %>
+<%= render 'shared/footer_user' %>
